[package]
name = "peasy-audio"
version = "0.2.1"
edition = "2021"
authors = ["PeasyTools"]
description = "Rust client for PeasyAudio — audio tools, glossary, and guides API"
license = "MIT"
repository = "https://github.com/peasytools/peasy-audio-rs"
homepage = "https://peasyaudio.com"
documentation = "https://docs.rs/peasy-audio"
readme = "README.md"
keywords = ["audio", "peasy", "api-client", "tools"]
categories = ["api-bindings"]
exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
